<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ui.main.MainMenu.SettingsFragment">


    <ImageView
        android:id="@+id/menu_view"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/menuwhite"
        android:contentDescription="@string/app_name"
        android:onClick="showmenu"
        />

    <Button
        android:id="@+id/sound_play"
        style="@style/btnStyle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/menu_view"
        android:layout_centerVertical="true"
        android:text="@string/play_sound" />

    <Button
        android:id="@+id/sound_stop"
        style="@style/btnStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sound_play"
        android:layout_centerVertical="true"
        android:text="@string/stop_sound" />


    <Button
        android:id="@+id/effect_play"
        style="@style/btnStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sound_stop"
        android:layout_centerVertical="true"
        android:text="@string/play_effect" />

    <Button
        android:id="@+id/effect_stop"
        style="@style/btnStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/effect_play"
        android:layout_centerVertical="true"
        android:text="@string/stop_effect" />

</RelativeLayout>