<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MenuFragment">


    <ImageView
        android:id="@+id/menu_view"
        android:layout_width="25dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/menuwhite"
        android:contentDescription="@string/app_name"
        android:onClick="showmenu"
        />

    <Button
        android:id="@+id/new_game_btn"
        style="@style/btnStyle"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/menu_view"
        android:text="@string/new_game_btn" />

    <Button
        android:id="@+id/score_btn"
        style="@style/btnStyle"
        android:layout_below="@+id/new_game_btn"
        android:layout_centerHorizontal="true"
        android:text="@string/score_btn" />

    <Button
        android:id="@+id/about_us_btn"
        style="@style/btnStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/score_btn"
        android:layout_centerVertical="true"
        android:text="@string/about_us_btn" />


    <Button
        android:id="@+id/sound_setting_btn"
        style="@style/btnStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/about_us_btn"
        android:layout_centerVertical="true"
        android:text="@string/sound_setting_btn" />

    <!--
    <Button
        android:id="@+id/exit_btn"
        style="@style/btnStyle"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/sound_setting_btn"
        android:layout_centerVertical="true"
        android:text="@string/exit_btn" />
    -->

</RelativeLayout>